[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "2.0.3"
bs58 = "0.5.1"
solana-client = "2.0.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
borsh = "0.10.3"